# hugomanage

./: .gitignore  .hugomanage  Cargo.toml  README.md  files.py  frontmatter.md  go.mod  hugomanage.py  pyproject.toml
content/posts/: winner.md
content/updates/: frontmatter.txt
hugomanage/: files.py  main.py
src/: main.rs
