[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "hugomanage"
version = "0.0.1"
authors = [
  { name="Emma Alexandria", email="emmalexandria@gmail.com" },
]
description = "A project to create Hugo content files easily"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/emmalexandria/hugomanage"
Issues = "https://github.com/emmalexandria/hugomanage/issues"
